--- a/workspace/nextflow.config
+++ b/workspace/nextflow.config
@@ -2,10 +2,17 @@ process {
     withLabel: philosopher {
         container = 'prvst/philosopher:4.0.0'
     }
-}
-
-docker {
-    enabled = true
+    withLabel: msfragger {
+        container = 'singjust/msfragger:3.1.1'
+    }
 }
 
 //singularity.enabled = true
+
+
+profiles {
+    docker {
+    docker.enabled = true
+    docker.runOptions = '--volume $HOME:$HOME'
+  }
+}
