new approach to config files

--- a/workspace/nextflow.config
+++ b/workspace/nextflow.config
@@ -1,17 +1,23 @@
-process {
-    withLabel: philosopher {
-        container = 'prvst/philosopher:4.0.0'
-    }
-    withLabel: msfragger {
-        container = 'singjust/msfragger:3.1.1'
-    }
+
+nextflow.enable.dsl=2
+
+params {
+    
+    input = "001_TPP7-21_C*.mzML"
+    outDir = "results"
+    proteome_ID = "UP000000589"
+
 }
 
-//singularity.enabled = true
-
 profiles {
+    /*
+    slurm {
+        includeConfig 'config/slurm.config'
+        params.fragger_RAM = 64
+    }
+    */
     docker {
-    docker.enabled = true
-    docker.runOptions = '--volume $HOME:$HOME'
-  }
+        includeConfig 'config/docker.config'
+        params.fragger_RAM = 4
+    }
 }
