parallelize the workflow

--- a/workspace/config/slurm.config
+++ b/workspace/config/slurm.config
@@ -1,11 +1,12 @@
 singularity {
+
 	enabled = true
 	autoMounts = true
 
 }
 
 process {
-	module = 'singularity'
+	//module = 'singularity'
 
 	withLabel: philosopher {
 		executor = 'slurm'
