--- a/workspace/nextflow.config
+++ b/workspace/nextflow.config
@@ -3,21 +3,22 @@ nextflow.enable.dsl=2
 
 params {
     
-    input = "001_TPP7-21_C*.mzML"
+    input = "*.mzML"
     outDir = "results"
-    proteome_ID = "UP000000589"
+    db = "${projectDir}/small_peptides_all_quad_samples.fasta"
 
 }
 
 profiles {
-    /*
+
     slurm {
         includeConfig 'config/slurm.config'
         params.fragger_RAM = 64
     }
-    */
+
     docker {
         includeConfig 'config/docker.config'
-        params.fragger_RAM = 4
+        params.fragger_RAM = 8
     }
+
 }
