changed pipeline to fit dev guidelines

--- a/workspace/config/slurm.config
+++ b/workspace/config/slurm.config
@@ -13,7 +13,7 @@ process {
 		//queue = 'gpuq' or 'workq'
 		//clusterOptions = ''
 		container = 'docker://prvst/philosopher:4.0.0'
-		containerOptions = '--volume $HOME:$HOME'
+		//containerOptions = '--volume $HOME:$HOME'
 	}
 
 	withLabel: msfragger {
@@ -21,6 +21,6 @@ process {
 		//queue = 'gpuq' or 'workq'
 		//clusterOptions = ''
 		container = 'docker://singjust/msfragger:3.1.1'
-		containerOptions = '--volume $HOME:$HOME'
+		//containerOptions = '--volume $HOME:$HOME'
 	}
 }
