--- a/workspace/nextflow.config
+++ b/workspace/nextflow.config
@@ -3,22 +3,30 @@ nextflow.enable.dsl=2
 
 params {
     
-    input = "*.mzML"
+    //input = "${projectDir}/../data/*.mzML"
+    input = "${projectDir}/*.mzML"
     outDir = "results"
     db = "${projectDir}/small_peptides_all_quad_samples.fasta"
+    fragger_mode = "local" // or "docker"
 
+}
+
+env {
+    
+    NXF_OPTS = '-Xms512M -Xmx2G'
+    
 }
 
 profiles {
 
     slurm {
         includeConfig 'config/slurm.config'
-        params.fragger_RAM = 64
+        params.fragger_ram = 64
     }
 
     docker {
         includeConfig 'config/docker.config'
-        params.fragger_RAM = 8
+        params.fragger_ram = 8
     }
 
 }
